# ham

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: index.md  tutorial.md
docs/api/: backend.md  contracts.md  deformation.md  diagnostics.md  grids.md  index.md  nonlinear.md  operator.md  pade.md  series.md  solver.md  spectral.md
docs/concepts/: convergence.md  deformation-chain.md  homotopy-equation.md  index.md  pade-acceleration.md  substrates.md
docs/design/: index.md  stages.md  tenets.md
docs/examples/: blasius-exponential.md  blasius.md  index.md  logistic.md  quadratic-drag.md  volterra.md
examples/: __init__.py  blasius.py  blasius_exponential.py  blasius_inverter.py  logistic.py  quadratic_drag.py  volterra.py
ham/: backend.py  contracts.py  deformation.py  diagnostics.py  grids.py  nonlinear.py  operator.py  pade.py  series.py  solver.py  spectral.py
tests/: strategies.py  test_backend.py  test_contracts.py  test_deformation.py  test_diagnostics.py  test_diagnostics_spectral.py  test_grids.py  test_nonlinear.py  test_operator.py  test_pade.py  test_qseries.py  test_series_generic.py  test_solver.py  test_spectral.py  test_spectral_solve.py
tests/examples/: __init__.py  test_blasius.py  test_blasius_exponential.py  test_blasius_inverter.py  test_logistic.py  test_quadratic_drag.py  test_volterra.py
